# libwebrtc

./: .gitignore  BUILD.gn  CMakeLists.txt  Dockerfile  Makefile  build.bat  build_linux.sh  config.txt  help.md  main.cpp
cmake/: libwebrtc.cmake  stduuid.cmake
example/: CMakeLists.txt  client.html  connection.h  main.cpp  master.h
include/websockets/: client.h
libs/linux_x64/: libwebrtc.so.TOC
libs/win_x64/: libwebrtc.dll.lib
libwebrtc/: BUILD.gn  CMakeLists.txt
libwebrtc/include/: rtc_video_device.h  rtc_video_frame.h  webrtc_app.h
libwebrtc/src/: rtc_audio_device_impl.cc  rtc_video_device_impl.cc  rtc_video_device_impl.h  rtc_video_frame_impl.cc
libwebrtc/src/internal/: video_capturer.h
linux/: .gclient
mac/: .boto  .gclient
scripts/: build.bat  build_linux.sh  build_mac.sh  install.bat  install_linux.sh  install_mac.sh  package.bat  package.sh
src/websockets/: CMakeLists.txt  client.cpp
test/: CMakeLists.txt  websockets_test.cpp
tools/config/linux/: .boto  .gclient  linux.md
tools/config/mac/: .gclient
tools/config/win/: .gclient
tools/mac/: win.md
